# xmonad-config

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build  hie.yaml  shell.nix  stack.yaml  xmobarrc  xmonad-config.cabal  xmonad.hs
app/: Bottom.hs  Main.hs
src/: Bottom.hs  Main.hs
